--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -63,13 +63,15 @@ COMMAND_LINE_10=-DCoordinatorEnvironmentBean.maintainHeuristics=NO
 # so setting a short periodicRecoveryPeriod is no longer useful.
 #COMMAND_LINE_11=-DRecoveryEnvironmentBean.periodicRecoveryPeriod=10
 COMMAND_LINE_11=-DRecoveryEnvironmentBean.recoveryBackoffPeriod=5
+#timeoutFactor is a multiplier by which delays are multiplied - set to a larger value on slow servers
+COMMAND_LINE_12=-DCoreEnvironmentBean.timeoutFactor=1
 #
 # enable these to debug spawned processes. You may need to pause the test
 # framework in a debugger too, or it may spawn multiple procs on the same
 # debug port.
 #
-#COMMAND_LINE_12=-Xdebug
-#COMMAND_LINE_13=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
+#COMMAND_LINE_13=-Xdebug
+#COMMAND_LINE_14=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
 
 
 #
