--- a/ArjunaJTS/idl/jacorb/pom.xml
+++ b/ArjunaJTS/idl/jacorb/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jboss.jbossts.jts</groupId>
     <artifactId>narayana-idl</artifactId>
-    <version>4.17.0.Final-SNAPSHOT</version>
+    <version>4.17.0.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
