--- a/STM/pom.xml
+++ b/STM/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jboss.jbossts</groupId>
     <artifactId>narayana-all</artifactId>
-    <version>4.17.0.Final-SNAPSHOT</version>
+    <version>4.17.0.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>org.jboss.jbossts.stm</groupId>
