--- a/XTS/WSAS/xts-test-servlet/pom.xml
+++ b/XTS/WSAS/xts-test-servlet/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jboss.jbossts.xts</groupId>
     <artifactId>xts-all</artifactId>
-    <version>4.17.0.Final-SNAPSHOT</version>
+    <version>4.17.0.Final</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
