--- a/XTS/localjunit/crash-recovery-tests/pom.xml
+++ b/XTS/localjunit/crash-recovery-tests/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.jboss.jbossts.xts</groupId>
 		<artifactId>localjunit</artifactId>
-		<version>4.17.0.Final-SNAPSHOT</version>
+		<version>4.17.0.Final</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
