--- a/fileio/pom.xml
+++ b/fileio/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.jboss.jbossts</groupId>
 		<artifactId>narayana-all</artifactId>
-		<version>4.17.0.Final-SNAPSHOT</version>
+		<version>4.17.0.Final</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
