--- a/rest-tx/pom.xml
+++ b/rest-tx/pom.xml
@@ -19,7 +19,7 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   <parent>
     <groupId>org.jboss.jbossts</groupId>
     <artifactId>narayana-all</artifactId>
-    <version>4.17.0.Final-SNAPSHOT</version>
+    <version>4.17.0.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
