--- a/rest-tx/tx/pom.xml
+++ b/rest-tx/tx/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.jboss.jbossts.rts</groupId>
     <artifactId>rest-tx</artifactId>
-    <version>4.17.0.Final-SNAPSHOT</version>
+    <version>4.17.0.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
