--- a/rest-tx/webservice/pom.xml
+++ b/rest-tx/webservice/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.jboss.jbossts.rts</groupId>
     <artifactId>rest-tx</artifactId>
-    <version>4.17.0.Final-SNAPSHOT</version>
+    <version>4.17.0.Final</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -29,7 +29,7 @@
   <description>Provides Transactions for web applications</description>
   <properties>
     <version.org.jboss.resteasy>2.0.0.GA</version.org.jboss.resteasy>
-    <version.artifactId>4.17.0.Final-SNAPSHOT</version.artifactId>
+    <version.artifactId>4.17.0.Final</version.artifactId>
     <artifactId.name>restat-web</artifactId.name>
   </properties>
   <dependencies>
