--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.jbossts</groupId>
         <artifactId>narayana-all</artifactId>
-        <version>4.17.0.Final-SNAPSHOT</version>
+        <version>4.17.0.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
