--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.jboss.jbossts</groupId>
     <artifactId>narayana-all</artifactId>
-    <version>4.17.0.Final</version>
+    <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
