Updated to version 4.16.6.Final-SNAPSHOT
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@38201 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/txbridge/tests/build.xml
+++ b/txbridge/tests/build.xml
@@ -4,7 +4,7 @@
 
     <import file="../../sharedbuild.xml"/>
 
-    <property name="jbossts.version" value="4.16.5.Final"/>
+    <property name="jbossts.version" value="4.16.6.Final-SNAPSHOT"/>
     <property name="groupid" value="org.jboss.jbossts"/>
     <property name="jboss.home" value="/tmp/jboss-as-7.1.0-SNAPSHOT"/>
 	<property name="standalone.xts.conf.path" value="${jboss.home}/standalone/configuration/standalone-xts.xml"/>
