--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -13,13 +13,13 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.jbossts.jts</groupId>
+    <groupId>org.jboss.narayana.jts</groupId>
     <artifactId>narayana-jts-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>jbossjts-jacorb</artifactId>
+  <artifactId>narayana-jts-jacorb</artifactId>
   <name>JBossJTS packaged module</name>
   <packaging>jar</packaging>
   <description>jts uber</description>
@@ -143,15 +143,15 @@
               <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
               <artifactSet>
                 <includes>
-                  <include>org.jboss.jbossts:common</include>
-                  <include>org.jboss.jbossts.arjunacore:arjuna</include>
-                  <include>org.jboss.jbossts.arjunacore:txoj</include>
-                  <include>org.jboss.jbossts.jta:jta</include>
-                  <include>org.jboss.jbossts.jta:jdbc</include>
-                  <include>org.jboss.jbossts.jts:orbportability</include>
-                  <include>org.jboss.jbossts.jts:jts</include>
-                  <include>org.jboss.jbossts.jts:jacorb-idl</include>
-                  <include>org.jboss.jbossts.jts:jtax</include>
+                  <include>org.jboss.narayana:common</include>
+                  <include>org.jboss.narayana.arjunacore:arjuna</include>
+                  <include>org.jboss.narayana.arjunacore:txoj</include>
+                  <include>org.jboss.narayana.jta:jta</include>
+                  <include>org.jboss.narayana.jta:jdbc</include>
+                  <include>org.jboss.narayana.jts:orbportability</include>
+                  <include>org.jboss.narayana.jts:jts</include>
+                  <include>org.jboss.narayana.jts:jacorb-idl</include>
+                  <include>org.jboss.narayana.jts:jtax</include>
                 </includes>
               </artifactSet>
             </configuration>
@@ -162,35 +162,35 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.jbossts</groupId>
+      <groupId>org.jboss.narayana</groupId>
       <artifactId>common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.arjunacore</groupId>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
       <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.arjunacore</groupId>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
       <artifactId>txoj</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.jta</groupId>
+      <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>jta</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.jta</groupId>
+      <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>jdbc</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.jts</groupId>
+      <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>orbportability</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.jts</groupId>
+      <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>jts</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.jts</groupId>
+      <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>jtax</artifactId>
     </dependency>
     <dependency>
