--- a/ArjunaJTA/jta/pom.xml
+++ b/ArjunaJTA/jta/pom.xml
@@ -13,7 +13,7 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.jbossts.jta</groupId>
+    <groupId>org.jboss.narayana.jta</groupId>
     <artifactId>narayana-jta-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -97,11 +97,11 @@
       <!-- TODO AS7 -->
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts</groupId>
+      <groupId>org.jboss.narayana</groupId>
       <artifactId>common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.arjunacore</groupId>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
       <artifactId>arjuna</artifactId>
     </dependency>
     <dependency>
