--- a/XTS/jbossxts/pom.xml
+++ b/XTS/jbossxts/pom.xml
@@ -13,7 +13,7 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.jbossts.xts</groupId>
+    <groupId>org.jboss.narayana.xts</groupId>
     <artifactId>xts-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -136,10 +136,10 @@
               <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
               <artifactSet>
                 <includes>
-                  <include>org.jboss.jbossts.xts:ws-c11:jar:api:${project.version}</include>
-                  <include>org.jboss.jbossts.xts:ws-t11:jar:api:${project.version}</include>
-                  <include>org.jboss.jbossts.xts:wstx11:jar:api:${project.version}</include>
-                  <include>org.jboss.jbossts.xts:bridge:jar:api:${project.version}</include>
+                  <include>org.jboss.narayana.xts:ws-c11:jar:api:${project.version}</include>
+                  <include>org.jboss.narayana.xts:ws-t11:jar:api:${project.version}</include>
+                  <include>org.jboss.narayana.xts:wstx11:jar:api:${project.version}</include>
+                  <include>org.jboss.narayana.xts:bridge:jar:api:${project.version}</include>
                 </includes>
               </artifactSet>
             </configuration>
@@ -155,10 +155,10 @@
               <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
               <artifactSet>
                 <includes>
-                  <include>org.jboss.jbossts.xts</include>
+                  <include>org.jboss.narayana.xts</include>
                 </includes>
                 <includes>
-                  <include>org.jboss.jbossts.xts</include>
+                  <include>org.jboss.narayana.xts</include>
                 </includes>
               </artifactSet>
             </configuration>
@@ -169,50 +169,50 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wsas</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wscf11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-c11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-t11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wstx11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>recovery</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>service</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-c11</artifactId>
       <classifier>api</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>api</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wstx11</artifactId>
       <classifier>api</classifier>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>bridge</artifactId>
       <classifier>api</classifier>
     </dependency>
