--- a/XTS/sar/pom.xml
+++ b/XTS/sar/pom.xml
@@ -13,7 +13,7 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.jbossts.xts</groupId>
+    <groupId>org.jboss.narayana.xts</groupId>
     <artifactId>xts-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -33,49 +33,49 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>recovery</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wstx11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-c11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-t11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wsas</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>wscf11</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-c11</artifactId>
       <classifier>war</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>client</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>coordinator</classifier>
       <type>war</type>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jbossts.xts</groupId>
+      <groupId>org.jboss.narayana.xts</groupId>
       <artifactId>ws-t11</artifactId>
       <classifier>participant</classifier>
       <type>war</type>
