--- a/fileio/pom.xml
+++ b/fileio/pom.xml
@@ -13,7 +13,7 @@
 	if not, write to the Free Software Foundation, Inc., 51 Franklin Street, 
 	Fifth Floor, Boston, MA 02110-1301, USA. (C) 2009, @author JBoss Inc. (jonathan.halliday@redhat.com) -->
 	<parent>
-		<groupId>org.jboss.jbossts</groupId>
+		<groupId>org.jboss.narayana</groupId>
 		<artifactId>narayana-all</artifactId>
 		<version>5.0.0.M2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -74,7 +74,7 @@
 		</dependency>
 		<!-- jboss jta -->
 		<dependency>
-			<groupId>org.jboss.jbossts.jta</groupId>
+			<groupId>org.jboss.narayana.jta</groupId>
 			<artifactId>narayana-jta</artifactId>
 		</dependency>
 		<!-- Apache Commons transaction -->
