--- a/rest-tx/pom.xml
+++ b/rest-tx/pom.xml
@@ -17,13 +17,13 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.jboss.jbossts</groupId>
+    <groupId>org.jboss.narayana</groupId>
     <artifactId>narayana-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.jboss.jbossts.rts</groupId>
+  <groupId>org.jboss.narayana.rts</groupId>
   <artifactId>rest-tx</artifactId>
   <packaging>pom</packaging>
   <name>RESTful Transactions</name>
