--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -13,7 +13,7 @@
 	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.jboss.jbossts</groupId>
+        <groupId>org.jboss.narayana</groupId>
         <artifactId>narayana-all</artifactId>
         <version>5.0.0.M2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -148,12 +148,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts.xts</groupId>
+            <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>jbossxts</artifactId>
             <classifier>api</classifier>
         </dependency>
         <dependency>
-            <groupId>org.jboss.jbossts.jta</groupId>
+            <groupId>org.jboss.narayana.jta</groupId>
             <artifactId>narayana-jta</artifactId>
         </dependency>
         <dependency>
