--- a/ArjunaJTS/narayana-jts-idlj/pom.xml
+++ b/ArjunaJTS/narayana-jts-idlj/pom.xml
@@ -19,7 +19,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>jbossjts-idlj</artifactId>
+  <artifactId>narayana-jts-idlj</artifactId>
   <name>JBossJTS packaged module with idlj stubs</name>
   <packaging>jar</packaging>
   <description>jts uber with idlj stubs</description>
