--- a/pom.xml
+++ b/pom.xml
@@ -819,7 +819,7 @@
       </dependency>
       <dependency>
         <groupId>org.jboss.narayana.jts</groupId>
-        <artifactId>jbossjts-idlj</artifactId>
+        <artifactId>narayana-jts-idlj</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
