Updated to add some more logging
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_6_1_GA_CP@38205 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/ArjunaJTS/jtax/build.xml
+++ b/ArjunaJTS/jtax/build.xml
@@ -190,9 +190,10 @@
 	<target name="com.hp.mwlabs.ts.jtax.tests.run" depends="com.hp.mwlabs.ts.jtax.tests.compile" if="com.hp.mwlabs.ts.jtax.tests.compile">
 	    <mkdir dir="${com.hp.mwlabs.ts.jtax.reports.dest}"/>
         
-	    <junit printsummary="yes">
+	    <junit printsummary="yes" showoutput="yes">
 	        <formatter type="plain"/>
 	        <classpath>
+                <pathelement location="tests/config/"/>
 	            <pathelement location="${com.hp.mwlabs.ts.jtax.tests.dest}"/>
 	            <path location="${com.hp.mwlabs.ts.jtax.dest}"/>
 	            <path refid="com.hp.mwlabs.ts.jacorb.classpath"/>
