Updated to version 4.16.6.Final
git-svn-id: http://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@38211 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70

--- a/build.xml
+++ b/build.xml
@@ -203,7 +203,7 @@
                 <filterset>
                     <filter token="groupid" value="${groupid}"/>
                     <filter token="artifact" value="@{artifact}"/>
-                    <filter token="version" value="4.16.6.Final-SNAPSHOT"/>
+                    <filter token="version" value="4.16.6.Final"/>
                     <filter token="packaging" value="@{packaging}"/>
                 </filterset>
             </copy>
