JBTM-1333, JBTM-1334, JBTM-1335 Support use of CDI interceptors on JAX-WS WS

--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -151,6 +151,11 @@
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-core</artifactId>
+            <version>1.1.10.Final</version>
+        </dependency>
     </dependencies>
 
     <profiles>
