JBTM-1298 updated to push the output to console to ensure that output is saved for CI

--- a/ArjunaJTS/integration/pom.xml
+++ b/ArjunaJTS/integration/pom.xml
@@ -53,6 +53,7 @@
         <configuration>
           <argLine>-Xms100m -Xmx100m</argLine>
           <useManifestOnlyJar>false</useManifestOnlyJar>
+	  <redirectTestOutputToFile>false</redirectTestOutputToFile>
         </configuration>
       </plugin>
     </plugins>
