JBTM-1211 increase transaction timeouts via MFACTOR

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -64,13 +64,16 @@ COMMAND_LINE_10=-DCoordinatorEnvironmentBean.maintainHeuristics=NO
 COMMAND_LINE_11=-DRecoveryEnvironmentBean.recoveryBackoffPeriod=5
 #timeoutFactor is a multiplier by which delays are multiplied - set to a larger value on slow servers
 COMMAND_LINE_12=-DCoreEnvironmentBean.timeoutFactor=1
+# change the default transaction timeout. If runing via narayana.sh and the env variable MFACTOR is set
+# then defaultTimeout is set to $MFACTOR * 120
+COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=120
 #
 # enable these to debug spawned processes. You may need to pause the test
 # framework in a debugger too, or it may spawn multiple procs on the same
 # debug port.
 #
-#COMMAND_LINE_13=-Xdebug
-#COMMAND_LINE_14=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
+#COMMAND_LINE_14=-Xdebug
+#COMMAND_LINE_15=-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
 
 
 #
